changed button text

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                     <div class="project-links-container">
                     <div class="project-links">
                         <a href="https://www.cigna.com/" class="project-link" target="_blank">
-                            <i class="fas fa-external-link-alt"></i> Main Website
+                            <i class="fas fa-external-link-alt"></i> Website
                         </a>
                         <a href="https://www.evernorth.com/app" class="project-link" target="_blank">
                             <i class="fas fa-laptop"></i> Web App
@@ -593,7 +593,7 @@
                     </div>
                     <div class="project-links">
                         <a href="https://www.adp.com/" class="project-link" target="_blank">
-                            <i class="fas fa-external-link-alt"></i> Main Website
+                            <i class="fas fa-external-link-alt"></i> Website
                         </a>
                         <a href="https://apps.adp.com/en-US/apps/29723" class="project-link" target="_blank">
                             <i class="fas fa-mobile-alt"></i> Apps
